# beckon

./: .gitignore  Cargo.toml  README.md  meson.build
.github/workflows/: release.yml
build-aux/: cargo.sh  gen-cargo-sources.sh
data/: com.github.breitburg.beckon.desktop  com.github.breitburg.beckon.metainfo.xml  com.github.breitburg.elementary-intelligence.desktop  com.github.breitburg.elementary-intelligence.gschema.xml  com.github.breitburg.elementary-intelligence.metainfo.xml  meson.build  style.css
flatpak/: cargo-sources.json  com.github.breitburg.beckon.yml  com.github.breitburg.elementary-intelligence.yml
src/: Application.vala  MainWindow.vala  api.rs  app.rs  autostart.rs  blur.rs  calendar.rs  cmark-gfm.vapi  config.rs  datetime.rs  eds.rs  keybinding.rs  mail.rs  main.rs  markdown.rs  mcp.rs  meson.build  screenshot.rs  settings_window.rs  spotlight.rs  tasks.rs  tools.rs  transcript.rs
src/Dialogs/: SettingsDialog.vala
src/Models/: Chat.vala  Message.vala
src/Services/: AIService.vala  Database.vala  MarkdownRenderer.vala
src/Widgets/: ChatSidebar.vala  ChatView.vala  MessageRow.vala  WelcomeView.vala
